--- a/F1_Legacy/home.html
+++ b/F1_Legacy/home.html
@@ -38,7 +38,7 @@
 
                     <li><a href="timeline.html">TIMELINE</a></li> 
 
-                    <li><a href="driver-profile.html">DRIVER PROFILE</a></li> 
+                    <li><a href="driver_prof.html">DRIVER PROFILE</a></li> 
 
                     <li><a href="team-history.html">TEAM HISTORY</a></li> 
 
