--- a/F1_Legacy/home.html
+++ b/F1_Legacy/home.html
@@ -64,8 +64,6 @@
 
                 <source src="videos/highlights.mp4" type="video/mp4"> 
 
-                Your browser does not support the video tag. 
-
             </video> 
 
  
@@ -80,9 +78,9 @@
 
                         <div class="slide-text-overlay"> 
 
-                            <p>Latest Race Highlights!</p> 
+                            <p>History</p> 
 
-                            <span class="slide-caption">Catch up on the action!</span> 
+                            <span class="slide-caption">Learn more about F1's History</span> 
 
                         </div> 
 
@@ -92,9 +90,9 @@
 
                         <div class="slide-text-overlay"> 
 
-                            <p>Exclusive Driver Interviews!</p> 
+                            <p>Past Teams</p> 
 
-                            <span class="slide-caption">Hear from your favorite stars!</span> 
+                            <span class="slide-caption">Learn how they started, their highs and lows</span> 
 
                         </div> 
 
