--- a/F1_Legacy/driver_prof.html
+++ b/F1_Legacy/driver_prof.html
@@ -10,9 +10,9 @@
 
     <title>F1 Hub - Driver Profile</title> 
 
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico"> <!-- Ensure your favicon is in the images folder --> 
+    <link rel="icon" type="image/x-icon" href="images/F1-Logo.png">
 
-    <link rel="stylesheet" href="styles/drivers_prof.css"> <!-- Link to your existing CSS file --> 
+    <link rel="stylesheet" href="styles/drivers_prof.css"> 
 
 </head> 
 
@@ -24,9 +24,8 @@
 
             <div class="logo-container"> 
 
-                <!-- Updated F1 logo to SVG for better scalability and quality --> 
 
-                <img src="images/f1_logo.svg" alt="Formula 1 Logo" class="f1-logo"> 
+                <img src="images/f1-logo.svg" alt="Formula 1 Logo" class="f1-logo"> 
 
             </div> 
 
