--- a/F1_Legacy/home.html
+++ b/F1_Legacy/home.html
@@ -10,7 +10,7 @@
 
     <title>F1 Hub</title> 
 
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico"> <!-- Add your favicon here --> 
+    <link rel="icon" type="image/x-icon" href="images/F1-Logo.png">
 
     <link rel="stylesheet" href="styles/home.css"> 
 
@@ -26,7 +26,7 @@
 
                 <!-- Replace with an actual F1 logo SVG or image --> 
 
-                <img src="images/f1_logo.svg" alt="Formula 1 Logo" class="f1-logo"> 
+                <img src="images/f1-logo.svg" alt="Formula 1 Logo" class="f1-logo"> 
 
             </div> 
 
