--- a/F1_Legacy/home.html
+++ b/F1_Legacy/home.html
@@ -24,9 +24,8 @@
 
             <div class="logo-container"> 
 
-                <!-- Replace with an actual F1 logo SVG or image --> 
 
-                <img src="images/f1-logo.svg" alt="Formula 1 Logo" class="f1-logo"> 
+                <img src="images/F1-Logo.png" alt="Formula 1 Logo" class="f1-logo"> 
 
             </div> 
 
