--- a/F1_Legacy/driver_prof.html
+++ b/F1_Legacy/driver_prof.html
@@ -25,7 +25,7 @@
             <div class="logo-container"> 
 
 
-                <img src="images/f1-logo.svg" alt="Formula 1 Logo" class="f1-logo"> 
+                <img src="images/F1-Logo.png" alt="Formula 1 Logo" class="f1-logo"> 
 
             </div> 
 
