--- a/F1_Legacy/driver_prof.html
+++ b/F1_Legacy/driver_prof.html
@@ -210,7 +210,7 @@
 
                     <div class="driver-profile-card"> 
 
-                        <img src="images/drivers/ferrari_driver1.jpg" alt="Lewis Hamilton" class="driver-photo"> 
+                        <img src="images/lewis-hamilton-ferrari.jpg" alt="Lewis Hamilton" class="driver-photo"> 
 
                         <h4>Lewis Hamilton</h4> 
 
@@ -234,7 +234,7 @@
 
                     <div class="driver-profile-card"> 
 
-                        <img src="images/drivers/ferrari_driver2.jpg" alt="Charles Leclerc" class="driver-photo"> 
+                        <img src="images/charles-leclerc-ferrari.jpg" alt="Charles Leclerc" class="driver-photo"> 
 
                         <h4>Charles Leclerc</h4> 
 
@@ -270,7 +270,7 @@
 
                     <div class="driver-profile-card"> 
 
-                        <img src="images/drivers/mercedes_driver1.jpg" alt="George Russell" class="driver-photo"> 
+                        <img src="images/george-russell-mercedes.jpg" alt="George Russell" class="driver-photo"> 
 
                         <h4>George Russell</h4> 
 
@@ -294,7 +294,7 @@
 
                     <div class="driver-profile-card"> 
 
-                        <img src="images/drivers/mercedes_driver2.jpg" alt="Kimi Antonelli" class="driver-photo"> 
+                        <img src="images/andrea-kimi-antonelli-mercedes.jpg" alt="Kimi Antonelli" class="driver-photo"> 
 
                         <h4>Kimi Antonelli</h4> 
 
@@ -330,7 +330,7 @@
 
                     <div class="driver-profile-card"> 
 
-                        <img src="images/drivers/williams_driver1.jpg" alt="Alex Albon" class="driver-photo"> 
+                        <img src="images/alex-albon-williams.jpg" alt="Alex Albon" class="driver-photo"> 
 
                         <h4>Alex Albon</h4> 
 
@@ -352,7 +352,7 @@
 
                     <div class="driver-profile-card"> 
 
-                        <img src="images/drivers/williams_driver2.jpg" alt="Carlos Sainz" class="driver-photo"> 
+                        <img src="images/carlos-sainz-williams.jpg" alt="Carlos Sainz" class="driver-photo"> 
 
                         <h4>Carlos Sainz</h4> 
 
@@ -388,7 +388,7 @@
 
                     <div class="driver-profile-card"> 
 
-                        <img src="images/drivers/astonmartin_driver1.jpg" alt="Fernando Alonso" class="driver-photo"> 
+                        <img src="images/fernando-alonso-aston-martin-r.jpg" alt="Fernando Alonso" class="driver-photo"> 
 
                         <h4>Fernando Alonso</h4> 
 
@@ -412,7 +412,7 @@
 
                     <div class="driver-profile-card"> 
 
-                        <img src="images/drivers/astonmartin_driver2.jpg" alt="Lance Stroll" class="driver-photo"> 
+                        <img src="images/lance-stroll-aston-martin.jpg" alt="Lance Stroll" class="driver-photo"> 
 
                         <h4>Lance Stroll</h4> 
 
@@ -446,9 +446,8 @@
 
                     <div class="driver-profile-card"> 
 
-                        <!-- Corrected driver for Racing Bulls --> 
 
-                        <img src="images/drivers/visacashapprb_driver2.jpg" alt="Liam Lawson" class="driver-photo"> 
+                        <img src="images/liam-lawson.jpg" alt="Liam Lawson" class="driver-photo"> 
 
                         <h4>Liam Lawson</h4> 
 
@@ -470,9 +469,7 @@
 
                     <div class="driver-profile-card"> 
 
-                        <!-- Corrected driver for Racing Bulls --> 
-
-                        <img src="images/drivers/visacashapprb_driver1.jpg" alt="Isack Hadjar" class="driver-photo"> 
+                        <img src="images/isack-hadjar.jpg" alt="Isack Hadjar" class="driver-photo"> 
 
                         <h4>Isack Hadjar</h4> 
 
@@ -506,7 +503,7 @@
 
                     <div class="driver-profile-card"> 
 
-                        <img src="images/drivers/kicksauber_driver1.jpg" alt="Nico Hülkenberg" class="driver-photo"> 
+                        <img src="images/nico-hulkenberg-stake-f1-team.jpg" alt="Nico Hülkenberg" class="driver-photo"> 
 
                         <h4>Nico Hülkenberg</h4> 
 
@@ -530,7 +527,7 @@
 
                     <div class="driver-profile-card"> 
 
-                        <img src="images/drivers/kicksauber_driver2.jpg" alt="Gabriel Bortoletto" class="driver-photo"> 
+                        <img src="images/gabriel-bortoleto-sauber.jpg" alt="Gabriel Bortoletto" class="driver-photo"> 
 
                         <h4>Gabriel Bortoletto</h4> 
 
@@ -560,7 +557,7 @@
 
                     <div class="driver-profile-card"> 
 
-                        <img src="images/drivers/haas_driver1.jpg" alt="Esteban Ocon" class="driver-photo"> 
+                        <img src="images/esteban-ocon-haas-f1-team.jpg" alt="Esteban Ocon" class="driver-photo"> 
 
                         <h4>Esteban Ocon</h4> 
 
@@ -580,7 +577,7 @@
 
                     <div class="driver-profile-card"> 
 
-                        <img src="images/drivers/haas_driver2.jpg" alt="Oliver Bearman" class="driver-photo"> 
+                        <img src="images/oliver-bearman-haas.jpg" alt="Oliver Bearman" class="driver-photo"> 
 
                         <h4>Oliver Bearman</h4> 
 
@@ -614,7 +611,7 @@
 
                     <div class="driver-profile-card"> 
 
-                        <img src="images/drivers/alpine_driver1.jpg" alt="Pierre Gasly" class="driver-photo"> 
+                        <img src="images/pierre-gasly-alpine.jpg" alt="Pierre Gasly" class="driver-photo"> 
 
                         <h4>Pierre Gasly</h4> 
 
@@ -634,7 +631,7 @@
 
                     <div class="driver-profile-card"> 
 
-                        <img src="images/drivers/alpine_driver2.jpg" alt="Franco Colapinto" class="driver-photo"> 
+                        <img src="images/franco-colapinto-alpine.jpg" alt="Franco Colapinto" class="driver-photo"> 
 
                         <h4>Franco Colapinto</h4> 
 
