commits last week

--- a/F1_Legacy/driver_prof.html
+++ b/F1_Legacy/driver_prof.html
@@ -41,7 +41,7 @@
 
                     <li><a href="team-history.html">TEAM HISTORY</a></li> 
 
-                    <li><a href="circuits.html">CIRCUITS</a></li> 
+                    <li><a href="circ.html">CIRCUITS</a></li> 
 
                     <li><a href="car-evolutions.html">CAR EVOLUTIONS</a></li> 
 
@@ -53,24 +53,21 @@
 
         </header> 
 
- 
-
-        <!-- Main content for the Driver Profile page --> 
 
         <main class="main-content"> 
 
             <div class="profile-header-visual"> 
 
-                <!-- Video tag for background visual under the main title --> 
+
 
                 <video autoplay loop playsinline class="driver-profile-video-background" poster="images/driver_profile_poster.jpg"> 
 
-                    <!-- Corrected video source to 'videos/drivers.mp4' as per your original request --> 
+
 
                     <source src="videos/drivers.mp4" type="video/mp4"> 
 
-                    <!-- Add other source types if needed for broader compatibility, e.g., .webm --> 
 
+                    
                     Your browser does not support the video tag. 
 
                 </video> 
