--- a/F1_Legacy/home.html
+++ b/F1_Legacy/home.html
@@ -33,7 +33,7 @@
 
                 <ul> 
 
-                    <li><a href="index.html">HOME</a></li> 
+                    <li><a href="home.html">HOME</a></li> 
 
                     <li><a href="timeline.html">TIMELINE</a></li> 
 
@@ -41,7 +41,7 @@
 
                     <li><a href="team-history.html">TEAM HISTORY</a></li> 
 
-                    <li><a href="circuits.html">CIRCUITS</a></li> 
+                    <li><a href="circ.html">CIRCUITS</a></li> 
 
                     <li><a href="car-evolutions.html">CAR EVOLUTIONS</a></li> 
 
