--- a/F1_Legacy/circ.html
+++ b/F1_Legacy/circ.html
@@ -18,9 +18,9 @@
                     <li><a href="home.html">HOME</a></li>
                     <li><a href="timeline.html">TIMELINE</a></li>
                     <li><a href="driver-profile.html">DRIVER PROFILE</a></li>
-                    <li><a href="team-history.html">TEAM HISTORY</a></li>
+                    <li><a href="team_hist.html">TEAM HISTORY</a></li>
                     <li><a href="circ.html">CIRCUITS</a></li>
-                    <li><a href="car-evolutions.html">CAR EVOLUTIONS</a></li>
+                    <li><a href="cars.html">CAR EVOLUTIONS</a></li>
                     <li><a href="moments.html">MOMENTS</a></li>
                 </ul>
             </nav>
