--- a/F1_Legacy/driver_prof.html
+++ b/F1_Legacy/driver_prof.html
@@ -37,13 +37,13 @@
 
                     <li><a href="timeline.html">TIMELINE</a></li> 
 
-                    <li><a href="driver-profile.html">DRIVER PROFILE</a></li> 
+                    <li><a href="driver_prof.html">DRIVER PROFILE</a></li> 
 
-                    <li><a href="team-history.html">TEAM HISTORY</a></li> 
+                    <li><a href="team-hist.html">TEAM HISTORY</a></li> 
 
                     <li><a href="circ.html">CIRCUITS</a></li> 
 
-                    <li><a href="car-evolutions.html">CAR EVOLUTIONS</a></li> 
+                    <li><a href="cars.html">CAR EVOLUTIONS</a></li> 
 
                     <li><a href="moments.html">MOMENTS</a></li> 
 
