--- a/F1_Legacy/cars.html
+++ b/F1_Legacy/cars.html
@@ -3,25 +3,221 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Technological Evolution</title>
+    <title>F1 Hub - Car Evolutions</title>
+    <link rel="icon" type="image/x-icon" href="images/F1-Logo.png"> 
+    <link rel="stylesheet" href="styles/car_evolutions.css"> 
 </head>
 <body>
-    <header>
-        <h4>
-            Technological Evolution(Work in Progress)
-        </h4>
-        <nav>
-            <a href="home.html">Home</a>
-            <a href="timeline.html">F1 Timeline</a>
-            <a href="driver_prof.html">Driver Profiles</a>
-            <a href="team_hist.html">Team History</a>
-            <a href="circ.html">Circuits Archive</a>
-            <a href="cars.html">Technical Evolution</a>
-            <a href="moments.html">Historic Moments</a>
-        </nav>
-    </header>
-    <main>
+    <div class="container">
+        <header>
+            <div class="logo-container">
+                <img src="images/F1-Logo.png" alt="Formula 1 Logo" class="f1-logo">
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="home.html">HOME</a></li>
+                    <li><a href="timeline.html">TIMELINE</a></li>
+                    <li><a href="driver_prof.html">DRIVER PROFILE</a></li>
+                    <li><a href="team_hist.html">TEAM HISTORY</a></li>
+                    <li><a href="circ.html">CIRCUITS</a></li>
+                    <li><a href="cars.html">CAR EVOLUTIONS</a></li>
+                    <li><a href="moments.html">MOMENTS</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main class="main-content">
+            <div class="car-evolutions-header-visual">
+                <img src="images/car_evolutions_header.jpg" alt="Evolution of F1 Cars" class="car-evolutions-background-image">
+                <div class="header-overlay-title-area">
+                    <h2>The Evolution of F1 Cars</h2>
+                    <p>Witness the incredible transformation of Formula 1 machinery through the decades.</p>
+                </div>
+            </div>
 
-    </main>
+            <section class="evolution-section modern-era">
+                <h3>The Modern Era (2014 - Present)</h3>
+                <div class="car-evolution-grid">
+                    <div class="car-era-card">
+                        <img src="images/car_evolutions/modern_car_1.jpg" alt="2022 F1 Car" class="car-era-photo">
+                        <h4>Ground Effect & Hybrid Power</h4>
+                        <p class="car-era-description">
+                            The current era is defined by the reintroduction of ground effect aerodynamics, larger wheels, and highly complex hybrid power units. These cars are incredibly fast, efficient, and technologically advanced, pushing the boundaries of engineering.
+                            <br><br>
+                            <strong>Key Characteristics:</strong> Ground effect tunnels, complex front and rear wings, large diffusers, V6 turbo-hybrid engines, DRS (Drag Reduction System).
+                        </p>
+                    </div>
+                    <div class="car-era-card">
+                        <img src="images/car_evolutions/modern_car_2.jpg" alt="2017 F1 Car" class="car-era-photo">
+                        <h4>Wider, Faster, More Aggressive (2017-2021)</h4>
+                        <p class="car-era-description">
+                            Prior to the 2022 regulations, cars became significantly wider and more aggressive in appearance, generating immense amounts of downforce. This period saw record-breaking lap times, making them some of the fastest F1 cars in history.
+                            <br><br>
+                            <strong>Key Characteristics:</strong> Wider chassis and tires, intricate bargeboards, high rake philosophy, powerful hybrid systems.
+                        </p>
+                    </div>
+                </div>
+            </section>
+
+            <section class="evolution-section turbo-hybrid-initial">
+                <h3>The Turbo-Hybrid Era (2014 - 2016)</h3>
+                <div class="car-evolution-grid">
+                    <div class="car-era-card">
+                        <img src="images/car_evolutions/turbo_hybrid_car.jpg" alt="2014 F1 Car" class="car-era-photo">
+                        <h4>The Dawn of Hybrid Power</h4>
+                        <p class="car-era-description">
+                            This marked a revolutionary shift to 1.6-liter V6 turbo-hybrid power units, combining internal combustion engines with powerful energy recovery systems (ERS). While initially criticized for sound, these cars brought unparalleled efficiency and complex strategic elements.
+                            <br><br>
+                            <strong>Key Characteristics:</strong> V6 turbo engines, ERS, complex energy management, initially controversial 'anteater' noses.
+                        </p>
+                    </div>
+                </div>
+            </section>
+
+            <section class="evolution-section v8-era">
+                <h3>The V8 Era (2006 - 2013)</h3>
+                <div class="car-evolution-grid">
+                    <div class="car-era-card">
+                        <img src="images/car_evolutions/v8_car_1.jpg" alt="2006 F1 Car" class="car-era-photo">
+                        <h4>Standardized V8s & Aero Wars</h4>
+                        <p class="car-era-description">
+                            To control costs and performance, F1 mandated 2.4-liter V8 engines. This era was characterized by intense aerodynamic development, with teams pushing the boundaries of winglets, bargeboards, and diffusers to gain an edge.
+                            <br><br>
+                            <strong>Key Characteristics:</strong> Naturally aspirated V8 engines, highly complex aerodynamic appendages, KERS (Kinetic Energy Recovery System) introduced later.
+                        </p>
+                    </div>
+                    <div class="car-era-card">
+                        <img src="images/car_evolutions/v8_car_2.jpg" alt="2009 F1 Car" class="car-era-photo">
+                        <h4>Slick Tires & KERS (2009)</h4>
+                        <p class="car-era-description">
+                            The 2009 season saw significant rule changes, including the return of slick tires and the introduction of KERS, a precursor to modern hybrid systems. Aerodynamic simplification aimed to improve overtaking.
+                            <br><br>
+                            <strong>Key Characteristics:</strong> Return of slick tires, KERS, simplified front wings, double diffusers (initially controversial).
+                        </p>
+                    </div>
+                </div>
+            </section>
+
+            <section class="evolution-section v10-era">
+                <h3>The V10 Era (1995 - 2005)</h3>
+                <div class="car-evolution-grid">
+                    <div class="car-era-card">
+                        <img src="images/car_evolutions/v10_car_1.jpg" alt="2004 F1 Car" class="car-era-photo">
+                        <h4>Peak Aerodynamics & V10 Scream</h4>
+                        <p class="car-era-description">
+                            Often considered the 'golden era' by many fans, these cars featured screaming V10 engines and highly sophisticated aerodynamics. This period saw incredible speeds and intense competition, with iconic cars and legendary drivers.
+                            <br><br>
+                            <strong>Key Characteristics:</strong> High-revving V10 engines, multi-element wings, advanced traction control and launch control (later banned).
+                        </p>
+                    </div>
+                    <div class="car-era-card">
+                        <img src="images/car_evolutions/v10_car_2.jpg" alt="1998 F1 Car" class="car-era-photo">
+                        <h4>Grooved Tires & Narrower Cars (1998)</h4>
+                        <p class="car-era-description">
+                            Regulations introduced grooved tires and narrower cars to reduce cornering speeds. Despite this, aerodynamic development continued at a rapid pace, leading to highly refined and visually distinct machines.
+                            <br><br>
+                            <strong>Key Characteristics:</strong> Grooved tires, narrower track width, sophisticated aerodynamic surfaces.
+                        </p>
+                    </div>
+                </div>
+            </section>
+
+            <section class="evolution-section v12-era">
+                <h3>The V12 & Early V10 Era (1989 - 1994)</h3>
+                <div class="car-evolution-grid">
+                    <div class="car-era-card">
+                        <img src="images/car_evolutions/v12_car_1.jpg" alt="1991 F1 Car" class="car-era-photo">
+                        <h4>High-Revving V12s & Active Suspension</h4>
+                        <p class="car-era-description">
+                            This period saw the peak of V12 engine development, producing incredibly powerful and high-revving engines. Active suspension systems also became prevalent, offering advanced control over ride height and handling.
+                            <br><br>
+                            <strong>Key Characteristics:</strong> V12 and early V10 engines, active suspension, semi-automatic gearboxes, early traction control.
+                        </p>
+                    </div>
+                    <div class="car-era-card">
+                        <img src="images/car_evolutions/v12_car_2.jpg" alt="1994 F1 Car" class="car-era-photo">
+                        <h4>Technological Ban (1994)</h4>
+                        <p class="car-era-description">
+                            Following concerns over driver aids, many electronic systems like active suspension, traction control, and ABS were banned for the 1994 season, leading to a more challenging driving experience.
+                            <br><br>
+                            <strong>Key Characteristics:</strong> Return to passive suspension, manual gearboxes (initially), simpler electronics.
+                        </p>
+                    </div>
+                </div>
+            </section>
+
+            <section class="evolution-section turbo-era">
+                <h3>The Turbo Era (1977 - 1988)</h3>
+                <div class="car-evolution-grid">
+                    <div class="car-era-card">
+                        <img src="images/car_evolutions/turbo_era_car_1.jpg" alt="1983 F1 Car" class="car-era-photo">
+                        <h4>Explosive Power & Ground Effect</h4>
+                        <p class="car-era-description">
+                            The turbo era brought immense power, with engines producing well over 1000 bhp in qualifying trim. Ground effect aerodynamics also dominated, creating incredible cornering speeds. These cars were brutal and challenging to drive.
+                            <br><br>
+                            <strong>Key Characteristics:</strong> Turbocharged engines, ground effect skirts and tunnels, massive rear wings, wide tires.
+                        </p>
+                    </div>
+                    <div class="car-era-card">
+                        <img src="images/car_evolutions/turbo_era_car_2.jpg" alt="1988 F1 Car" class="car-era-photo">
+                        <h4>Final Turbo Years & Flat Bottoms (1988)</h4>
+                        <p class="car-era-description">
+                            In its final year before the turbo ban, regulations mandated flat bottoms to reduce ground effect. Despite this, cars remained incredibly powerful, leading to some of the most iconic F1 machines.
+                            <br><br>
+                            <strong>Key Characteristics:</strong> Restricted turbo boost, flat bottom chassis, still immense power.
+                        </p>
+                    </div>
+                </div>
+            </section>
+
+            <section class="evolution-section early-aero">
+                <h3>Early Aerodynamics & Flat-12s (1966 - 1976)</h3>
+                <div class="car-evolution-grid">
+                    <div class="car-era-card">
+                        <img src="images/car_evolutions/early_aero_car_1.jpg" alt="1970 F1 Car" class="car-era-photo">
+                        <h4>Wings Emerge & Flat-12 Engines</h4>
+                        <p class="car-era-description">
+                            This period saw the experimental introduction and rapid development of aerodynamic wings, dramatically increasing downforce. Flat-12 engines from manufacturers like Ferrari and Brabham became prominent, offering a low center of gravity.
+                            <br><br>
+                            <strong>Key Characteristics:</strong> High-mounted wings, increasing aerodynamic devices, flat-12 and V8 engines, wider tires.
+                        </p>
+                    </div>
+                    <div class="car-era-card">
+                        <img src="images/car_evolutions/early_aero_car_2.jpg" alt="1975 F1 Car" class="car-era-photo">
+                        <h4>Cigar Tubes to Wider Bodies (Mid-70s)</h4>
+                        <p class="car-era-description">
+                            Cars transitioned from slender "cigar tube" designs to wider, more aerodynamically sculpted bodies. Safety also began to be a greater consideration, leading to more robust chassis designs.
+                            <br><br>
+                            <strong>Key Characteristics:</strong> Wider chassis, more integrated bodywork, increasing focus on aerodynamic efficiency.
+                        </p>
+                    </div>
+                </div>
+            </section>
+
+            <section class="evolution-section classic-era">
+                <h3>The Classic Era (1950 - 1965)</h3>
+                <div class="car-evolution-grid">
+                    <div class="car-era-card">
+                        <img src="images/car_evolutions/classic_car_1.jpg" alt="1950 F1 Car" class="car-era-photo">
+                        <h4>Front-Engined Grand Prix Cars</h4>
+                        <p class="car-era-description">
+                            The very beginning of the F1 World Championship era, dominated by powerful front-engined machines. These cars were raw, powerful, and demanded immense skill from their drivers.
+                            <br><br>
+                            <strong>Key Characteristics:</strong> Front-mounted engines, large open wheels, basic aerodynamics, drum brakes.
+                        </p>
+                    </div>
+                    <div class="car-era-card">
+                        <img src="images/car_evolutions/classic_car_2.jpg" alt="1960 F1 Car" class="car-era-photo">
+                        <h4>Rear-Engined Revolution (1960s)</h4>
+                        <p class="car-era-description">
+                            A pivotal shift occurred with the widespread adoption of rear-engined layouts, dramatically improving handling and balance. This laid the foundation for the modern F1 car.
+                            <br><br>
+                            <strong>Key Characteristics:</strong> Rear-mounted engines, increasing sophistication in chassis design, disc brakes becoming common.
+                        </p>
+                    </div>
+                </div>
+            </section>
+
+        </main>
+    </div>
 </body>
 </html>
