--- a/F1_Legacy/home.html
+++ b/F1_Legacy/home.html
@@ -39,11 +39,11 @@
 
                     <li><a href="driver_prof.html">DRIVER PROFILE</a></li> 
 
-                    <li><a href="team-history.html">TEAM HISTORY</a></li> 
+                    <li><a href="team_hist.html">TEAM HISTORY</a></li> 
 
                     <li><a href="circ.html">CIRCUITS</a></li> 
 
-                    <li><a href="car-evolutions.html">CAR EVOLUTIONS</a></li> 
+                    <li><a href="cars.html">CAR EVOLUTIONS</a></li> 
 
                     <li><a href="moments.html">MOMENTS</a></li> 
 
